# panloader

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build-panwrap.sh  gdb.py  meson.build
docs/: framebuffer_memory_notes.md  job_memory_map.md  jobs.md  textures.md
include/: list.h  mali-ioctl.h  mali-job.h  meson.build  panloader-util.h
panwrap/: .gitignore  CMakeLists.txt  meson.build  panwrap-decoder.c  panwrap-decoder.h  panwrap-mmap.c  panwrap-mmap.h  panwrap-shader.c  panwrap-shader.h  panwrap-syscall.c  panwrap-util.c  panwrap.h
src/: .gitignore  CMakeLists.txt  allocate.c  assemble.c  demo.sh  main.c  meson.build  pandev.c  pandev.h  slow-framebuffer.c  slow-framebuffer.h  swizzle-fun.c
tools/: midgard-assemble.py
